@@ -1,5 +1,6 @@
 from unittest import TestCase
 from ftw.solr.patches.mangler import cleanupQueryParameters
+from ftw.solr.patches.mangler import extractQueryParameters
 from collective.solr.parser import SolrSchema, SolrField
 
 
@@ -37,3 +38,10 @@ class TestQueryParameters(TestCase):
         params = cleanupQueryParameters({'facet.field': ['foo', 'bar']},
                                         schema)
         self.assertEquals({'facet': 'true', 'facet.field': ['bar']}, params)
+
+    def test_insert_default_qt_parameter(self):
+        self.assertEquals({'qt': 'select'}, extractQueryParameters({}))
+
+    def test_keep_existing_qt_parameter(self):
+        self.assertEquals({'qt': 'search'}, extractQueryParameters(
+            {'qt': 'search'}))
